--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -327,7 +327,7 @@
             url: '/book/' + this.value + '/delete/',
             type: 'post',
             success: function(data, status){
-                console.log(data);
+                // console.log(data);
                 window.location = "/{{request.user.username}}/?show=links";
             }
 
