--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -186,7 +186,7 @@
                     </a>
                 </li>
                 {% endif %}
-            {%  if links.tag.all|length != 0 %}
+            {%  if link.tags.all|length != 0 %}
                 <li class="collection-item avatar" style="padding: 5px; min-height: 10px">
 
                   <!--  <span class="title blue-grey-text">Tags</span> -->
