minor fix in og card

--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -167,7 +167,7 @@
                 <!-- Open Graph data -->
                 {% if link.og_data.title != None %}
                 <li class="collection-item avatar " style="padding: 4px">
-                    <a href="{{ ITEM.link.url }}" style="text-decoration: none; color: black" target="_blank">
+                    <a href="{{ link.url }}" style="text-decoration: none; color: black" target="_blank">
                     <div class="card hoverable horizontal">
                         {% if link.og_data.image != None %}
                         <div class="card-image" style="margin: 4px;" id="card_image_div">
