--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -11,8 +11,8 @@
     <!-- This will help in zooming in mobile-->
     <meta property="og:title" content="LinkBook | A social media for links!"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://linkbook.pythonanywhere.com/"/>
-    <meta property="og:image" content="http://linkbook.pythonanywhere.com/static/og_image.jpg"/>
+    <meta property="og:url" content="http://link-book.herokuapp.com/"/>
+    <meta property="og:image" content="http://link-book.herokuapp.com/static/og_image.jpg"/>
     <meta property="og:site_name" content="LinkBook"/>
     <meta property="og:description" content="LinkBook lets you share and manage your links with ease. Create an account to get started!"/>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
