--- a/linkbook/core/templates/core/aboutus.html
+++ b/linkbook/core/templates/core/aboutus.html
@@ -107,7 +107,7 @@
     </div>
 </div>
 
-<div class="thanks">(Special thanks to <a href = "https://www.facebook.com/devashishtri">Devashish Trivedi</a> for the title logo/background)</div>
+<div class="thanks">(Special thanks to <a href = "https://www.facebook.com/devashishtri" target="_blank">Devashish Trivedi</a> for the title logo/background)</div>
 
     <script>
         $('.modal').modal();
