added theme for mobile browsers

--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -8,6 +8,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#26a69a">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#26a69a">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- This will help in zooming in mobile-->
     <meta property="og:title" content="LinkBook | A social media for links!"/>
     <meta property="og:type" content="website"/>
