--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -303,12 +303,6 @@
         <div class="col s12 m1 l3 xl3"></div>
     </div>
 </div>
-
-
-
-
-
-
 <!--  Sharing dropdown -->
 
 
@@ -461,21 +455,19 @@
 
                         </textarea>
                         <div class="row">
-                            <div class="col 12 m12 l6 xl6">
+                            <div class="col s6 m12 l6 xl6" style="width: 100%">
                                 <button class="btn editCommentButton" id="editCommentButton{{ ITEM.link.id }}">Save</button>
                             </div>
-                            <div class="col 12 m12 l6 xl6">
+                            <div class="col s6 m12 l6 xl6" style="width: 100%">
                                 <button class="btn red white-text deleteCommentButton" id="deleteCommentButton{{ ITEM.link.id }}">Delete</button>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="col s1 m1 l1 xl1"></div>
             </div>
         </div>
     </div>
-
         {% empty %}
         <div class="row" style="margin: 5px; padding: 1px">
             <h5 class="center center-align">Follow people to see posts in your feed.</h5>
