Fixes and improvements

--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -124,7 +124,7 @@
                 <li class="collection-item avatar" style="border-bottom: none; height: 10px; padding-bottom: 0px;">
                     <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
-                        <a class="/{{ ITEM.link.user.username }}"> <img class="responsive-img circle"  height = "40px" width="40px" src="{{ITEM.link.user.profile.pic}}" /></a>
+                        <a href="/{{ ITEM.link.user.username }}"> <img class="responsive-img circle"  height = "40px" width="40px" src="{{ITEM.link.user.profile.pic}}" /></a>
                         <div class="row" style="margin: 0px">
                             <div class="col s6 m6 l6 xl6" style="word-wrap: break-word; margin: 0px; padding: 0px; font-size: 0.5em">
                                 <a href="/{{ ITEM.link.user.username }}" class="hide-on-small-only"> <span class="title blue-grey-text ">{{ ITEM.link.user }}<br/>
