--- a/linkbook/links/templates/links/view_books.html
+++ b/linkbook/links/templates/links/view_books.html
@@ -17,7 +17,7 @@
         <!--
         <h3 class="center center-align "><span class="blue-grey white-text" style="padding: 3px; border-radius: 5%; font-family: Dosis;">{{user.first_name}}'s Links</span></h3> -->
 
-        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">{{ user.first_name }}'s books</h3>
+        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">{{user.first_name}}'s Books</h3>
 
     </div>
     <div class="row" style="padding: 0px">
@@ -27,10 +27,10 @@
             <div class="row" style="padding: 0px">
                 <div class="col s12 m12 l12 xl12">
                     <div class="card horizontal hoverable blue-grey white-text lighten-1 ">
-                          <div class="card-stacked">
+                          <div class="card-stacked" style="max-width: 100%">
                               <div class="card-title center"><h4>{{ book.title }}</h4></div>
-                              <div class="card-content">
-                              <p class="description">{{ book.description }}</p>
+                              <div class="card-content" style="max-width: 100%">
+                              <p class="description" style="max-width: 100%; word-wrap: break-word">{{ book.description }}</p>
                               <p>{{book.link_set.count}} link(s)</p>
                             </div>
                           </div>
