--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -8,12 +8,14 @@
     <style>
         .card1
         {
-            height : 320px;
+            height : 390px;
         }
         .description
         {
-            overflow: hidden;
-            max-height : 65px;
+             max-width: 90%;
+             overflow: hidden;
+             height : 107px;
+             word-wrap: break-word;
         }
         .BooksP
         {
@@ -148,11 +150,11 @@
                             {% for link in book.link_set.all %}
                                 <div class="col s12 m12 l6 xl6">
                                 <div class="card card1 horizontal hoverable blue-grey white-text lighten-1">
-                              <div class="card-stacked">
-                                  <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
+                              <div class="card-stacked" style="max-width: 100%">
+                                  <div class="card_link" id="{{ link.id }}"  style="cursor: pointer; max-width: 100%">
                                   <div class="card-title center"><h5>{{link.title}}</h5></div>
-                                  <div class="card-content" id="{{ link.id }}">
-                                  <p class="description">{{ link.description }}</p>
+                                  <div class="card-content" id="{{ link.id }}" style="max-width: 100%">
+                                  <p class="description" style="word-wrap: break-word; max-width: 100%">{{ link.description }}</p>
                                  {% if link.books.all|length != 0 %}
                                   <p class="BooksP">Books:
                                     {% for book in link.books.all %}
@@ -251,11 +253,11 @@
                             {% for link in view_links %}
                                 <div class="col s12 m12 l6 xl6">
                                 <div class="card card1 horizontal hoverable blue-grey white-text lighten-1">
-                              <div class="card-stacked">
-                                  <div class="card_link" id="{{ link.id }}"  style="cursor: pointer;">
-                                  <div class="card-title center"><h5>{{link.title}}</h5></div>
-                                  <div class="card-content" id="{{ link.id }}">
-                                  <p class="description">{{ link.description }}</p>
+                              <div class="card-stacked" style="max-width: 100%">
+                                  <div class="card_link" id="{{ link.id }}"  style="cursor: pointer; max-width: 100%">
+                                  <div class="card-title center" style="max-width: 100%"><h5>{{link.title}}</h5></div>
+                                  <div class="card-content" id="{{ link.id }}" style="max-width: 100%">
+                                  <p class="description" style="max-width: 100%; word-wrap: break-word">{{ link.description }}</p>
                                   {% if link.books.all|length != 0 %}
                                       <p class="BooksP">Books:
                                     {% for book in link.books.all %}
